--- a/shawazi_magezi/package.json
+++ b/shawazi_magezi/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.1.7",
     "express": "^4.21.0",
     "http-proxy-middleware": "^3.0.2",
     "js-cookie": "^3.0.5",
