--- a/shawazi_magezi/package.json
+++ b/shawazi_magezi/package.json
@@ -31,6 +31,7 @@
     "leaflet.gridlayer.googlemutant": "^0.14.1",
     "lucide-react": "^0.446.0",
     "next": "^14.2.13",
+    "next-auth": "^4.24.10",
     "next-pwa": "^5.6.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
